--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "sass-loader": "^12.6.0",
+    "styled-reset": "^4.3.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
